--- a/config.yml
+++ b/config.yml
@@ -2,6 +2,9 @@ backend:
   name: github
   repo: picohook/libedge-website
   branch: main
+  site_domain: libedge-website.pages.dev
+  base_url: https://api.github.com
+  auth_endpoint: https://github.com/login/oauth/authorize
 
 media_folder: "assets/images/uploads"
 public_folder: "/assets/images/uploads"
