--- a/admin/config.yml
+++ b/admin/config.yml
@@ -25,7 +25,7 @@ collections:
           - {label: "Duyuru Listesi", name: "items", widget: "list", fields: [
               {label: "Başlık", name: "title", widget: "string"},
               {label: "Tarih", name: "date", widget: "datetime", format: "YYYY-MM-DD"},
-              {label: "Kategori", name: "category", widget: "select", options: ["urgent", "new-product", "event", "maintenance", "general"]},
+              {label: "Kategori", name: "category", widget: "select", options: ["urgent", "new-product", "product-update", "event", "maintenance", "general"]},
               {label: "Özet (Kısa Açıklama)", name: "summary", widget: "text"},
               {label: "Tam İçerik (Detaylı Açıklama)", name: "full_content", widget: "markdown"}
             ]}
