--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,3 +1,7 @@
 name = "form-handler"
 main = "backend/src/index.js"
 compatibility_date = "2024-09-01"
+
+[[kv_namespaces]]
+binding = "VIEW_COUNTS" # Worker kodunda kullanılacak isim (env.KV)
+id = "13f653d049d248cba1bdba46345302b4" # Kopyaladığınız Namespace ID'sini buraya yapıştırın
