--- a/wrangler.toml
+++ b/wrangler.toml
@@ -3,7 +3,7 @@ main = "backend/src/index.js"
 compatibility_date = "2024-09-01"
 
 name = "view-counter"
-main = "index.js"
+main = "backend/src/index.js"
 compatibility_date = "2025-10-12"
 
 [[kv_namespaces]]
