--- a/view-counter/wrangler.toml
+++ b/view-counter/wrangler.toml
@@ -1,17 +1,11 @@
-name = "view-counter-worker"
-main = "index.js"          # Worker ana dosyası
+name = "view-counter"
+main = "index.js"
 compatibility_date = "2025-10-12"
 
-# =======================================================
-# Durable Object Binding
-# =======================================================
 [[durable_objects]]
-binding = "MY_DURABLE_OBJECT"   # index.js içinde kullanılan env.MY_DURABLE_OBJECT
-class_name = "MyDurableObject" # Daha önce export edilen DO sınıf adı
+binding = "COUNTER"        # index.js içindeki env.COUNTER
+class_name = "MyDurableObject"  # eski DO ile uyumlu
 
-# =======================================================
-# Migrations - mevcut DO'larla uyumlu
-# =======================================================
 [[migrations]]
 tag = "v1"
 new_classes = ["MyDurableObject"]
